@@ -44,6 +44,8 @@
 	  support/regression/tests/gcc-torture-execute-pr47337.c,
 	  support/regression/tests/gcc-torture-execute-961213-1.c:
 	  Fixed bug #3513892.
+	* src/SDCCralloc.hpp:
+	  Additional assertions to track down #3475617.
 
 2012-04-01 Philipp Klaus Krause <pkk AT spth.de>
 
